# read_elf

./: CMakeLists.txt  LICENSE  README.md
src/: argument_manager.c  argument_manager.h  ehdr.c  ehdr.h  main.c  phdr.c  phdr.h  read_elf.c  read_elf.h  shdr.c  shdr.h
